[package]
authors = ["J David Smith <emallson@atlanis.net>"]
name = "tiptop"
version = "0.1.0"

[features]
default = ["cplex"]
grb = ["gurobi"]
cplex = ["rplex"]

[dependencies]
bincode = "0.8.0"
bit-set = "0.4.0"
docopt = "0.8"
lazy_static = "0.2.2"
nom = "3.2.1"
rand = "0.3.15"
rayon = "0.8.2"
rustc-serialize = "0.3.22"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0"
slog = "1.5.2"
slog-json = "1.2.1"
slog-stream = "1.2.0"
slog-term = "1.5.0"
statrs = "0.8.0"

[dependencies.capngraph]
git = "https://github.com/emallson/capngraph.git"
optional = false

[dependencies.petgraph]
features = ["quickcheck"]
version = "0.4.7"

[dependencies.rand-mersenne-twister]
git = "https://github.com/emallson/rust-mersenne-twister.git"
optional = false

[dependencies.ris]
features = ["hash"]
git = "https://github.com/emallson/ris.rs.git"
optional = false

[dependencies.rplex]
git = "https://github.com/emallson/rplex.git"
version = "0.2.3"
optional = true

[dependencies.vec-graph]
git = "https://github.com/emallson/vec-graph.git"
optional = false

[dependencies.gurobi]
git = "https://github.com/emallson/gurobi.rs.git"
optional = true

[dev-dependencies]
quickcheck = "0.4.1"

[profile]

[profile.release]
debug = true

[profile.dev]
opt-level = 2
